fixing image overlapping

--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -4,3 +4,9 @@
     left: 40%;
     text-align: center; 
 }
+
+.images {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
